--- a/allomusee-web/views/index.html
+++ b/allomusee-web/views/index.html
@@ -3,19 +3,44 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js" type="text/javascript"></script>
-    <script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?libraries=geometry&sensor=true" type="text/javascript"></script>
+    <script src="/javascripts/markerclusterer.js" type="text/javascript"></script>
+    <script>MarkerClusterer.prototype.MARKER_CLUSTER_IMAGE_PATH_="../images/m";</script>
     <script src='/javascripts/gmaps.js' type='text/javascript'></script>
     <script src='/javascripts/app.js' type='text/javascript'></script>
+      <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-45183115-1', 'allomusee.com');
+          ga('send', 'pageview');
+
+      </script>
   </head>
   <body>
   <div id="wrapper">
+    <header></header>
     <div id="map"></div>
     <div id="centerBox">
-        <img src="/images/coming_soon.png" id="logo" />
-        <div id="hashtagBox">#DATACULTURE #HACKATON</div>
+        <img src="/images/LOGO_SANS_TXT.png" class="intro-logoImage">
+        <span class="intro-logoText"><span class="grey">ALLO</span>MUSEE</span>
     </div>
-
+  <div id="leftPanelBg"></div>
+  <div id="leftPanel">
+      <div id="panel-header">
+          <div class="logoBox">
+              <img id="logoImage" src="/images/LOGO_SANS_TXT.png" />
+              <span class="logoText"><span class="grey">ALLO</span>MUSEE</span>
+          </div>
+      </div>
+      <div id="markersInfo">
+          <ul>
+          </ul>
+      </div>
+  </div>
   </div>
   </body>
 </html>
