--- a/allomusee-web/views/index.html
+++ b/allomusee-web/views/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title><%= title %></title>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
     <script src="http://maps.googleapis.com/maps/api/js?libraries=geometry&sensor=true" type="text/javascript"></script>
@@ -17,7 +18,6 @@
 
           ga('create', 'UA-45183115-1', 'allomusee.com');
           ga('send', 'pageview');
-
       </script>
   </head>
   <body>
@@ -26,21 +26,21 @@
     <div id="map"></div>
     <div id="centerBox">
         <img src="/images/LOGO_SANS_TXT.png" class="intro-logoImage">
-        <span class="intro-logoText"><span class="grey">ALLO</span>MUSEE</span>
+        <span class="intro-logoText"><span class="grey">ALLO</span>MUSÉE</span>
     </div>
-  <div id="leftPanelBg"></div>
-  <div id="leftPanel">
+    <div id="leftPanelBg"></div>
+    <div id="leftPanel">
       <div id="panel-header">
           <div class="logoBox">
               <img id="logoImage" src="/images/LOGO_SANS_TXT.png" />
-              <span class="logoText"><span class="grey">ALLO</span>MUSEE</span>
+              <span class="logoText"><span class="grey">ALLO</span>MUSÉE</span>
           </div>
       </div>
       <div id="markersInfo">
           <ul>
           </ul>
       </div>
-  </div>
+    </div>
   </div>
   </body>
 </html>
