--- a/allomusee-web/views/index.html
+++ b/allomusee-web/views/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>ALLOMUSÉE</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="apple-touch-icon" sizes="150x150" href="/images/touch-icon-iphone4.png" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
-    <script src="http://maps.googleapis.com/maps/api/js?libraries=geometry&sensor=true" type="text/javascript"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?libraries=geometry&sensor=true&key=AIzaSyC0jDFUe_b_QovWnuEgxsigfLauxcWJLCQ" type="text/javascript"></script>
     <script src="/javascripts/markerclusterer.js" type="text/javascript"></script>
     <script>MarkerClusterer.prototype.MARKER_CLUSTER_IMAGE_PATH_="../images/m";</script>
     <script src='/javascripts/gmaps.js' type='text/javascript'></script>
     <script src='/javascripts/app.js' type='text/javascript'></script>
-      <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-          ga('create', 'UA-45183115-1', 'allomusee.com');
-          ga('send', 'pageview');
-      </script>
+      ga('create', 'UA-45183115-1', 'allomusee.com');
+      ga('send', 'pageview');
+    </script>
   </head>
   <body>
   <div id="wrapper">
@@ -27,6 +28,7 @@
     <div id="centerBox">
         <img src="/images/LOGO_SANS_TXT.png" class="intro-logoImage">
         <span class="intro-logoText"><span class="grey">ALLO</span>MUSÉE</span>
+        <div id="hashtagBox">#DATACULTURE #HACKATON</div>
     </div>
     <div id="leftPanelBg"></div>
     <div id="leftPanel">
@@ -40,6 +42,7 @@
           <ul>
           </ul>
       </div>
+      <div class="android-app"><a href="#"><img src="/images/GET_IT_ON_GOOGLE.png"/></a></div>
     </div>
   </div>
   </body>
